test/corpus/executable.txt
========================================
Anonymous query
========================================

{ a b { c } }

----------------------------------------

(document
  (operation_definition
    (selection_set
      (field
        (name))
      (field
        (name)
        (selection_set
          (field
            (name)))))))

========================================
Named query with variables and directives
========================================

query Q($a: Int = 1, $b: [String!]! @d) @live {
  a
}

----------------------------------------

(document
  (operation_definition
    (operation_type)
    (name)
    (variable_definitions
      (variable_definition
        (variable
          (name))
        (named_type
          (name))
        (default_value
          (int_value)))
      (variable_definition
        (variable
          (name))
        (non_null_type
          (list_type
            (non_null_type
              (named_type
                (name)))))
        (directives
          (directive
            (name)))))
    (directives
      (directive
        (name)))
    (selection_set
      (field
        (name)))))

========================================
Mutation and subscription
========================================

mutation M { x }

subscription S { y }

----------------------------------------

(document
  (operation_definition
    (operation_type)
    (name)
    (selection_set
      (field
        (name))))
  (operation_definition
    (operation_type)
    (name)
    (selection_set
      (field
        (name)))))

========================================
Multiple directives on a field
========================================

{ a @include(if: $x) @skip(if: $y) }

----------------------------------------

(document
  (operation_definition
    (selection_set
      (field
        (name)
        (directives
          (directive
            (name)
            (arguments
              (argument
                (name)
                (variable
                  (name)))))
          (directive
            (name)
            (arguments
              (argument
                (name)
                (variable
                  (name))))))))))

========================================
Alias, arguments and nested selection
========================================

{ s: user(id: "1", n: 2) { name } }

----------------------------------------

(document
  (operation_definition
    (selection_set
      (field
        (alias
          (name))
        (name)
        (arguments
          (argument
            (name)
            (string_value
              (string_content)))
          (argument
            (name)
            (int_value)))
        (selection_set
          (field
            (name)))))))

========================================
Fragments
========================================

fragment F on T @d { id }

{ ...F @d ... on T { id } ... @d { id } }

----------------------------------------

(document
  (fragment_definition
    (fragment_name
      (name))
    (type_condition
      (named_type
        (name)))
    (directives
      (directive
        (name)))
    (selection_set
      (field
        (name))))
  (operation_definition
    (selection_set
      (fragment_spread
        (fragment_name
          (name))
        (directives
          (directive
            (name))))
      (inline_fragment
        (type_condition
          (named_type
            (name)))
        (selection_set
          (field
            (name))))
      (inline_fragment
        (directives
          (directive
            (name)))
        (selection_set
          (field
            (name)))))))

========================================
Keywords as names
========================================

{ type on query fragment(on: type, schema: input) { enum union } }

----------------------------------------

(document
  (operation_definition
    (selection_set
      (field
        (name))
      (field
        (name))
      (field
        (name))
      (field
        (name)
        (arguments
          (argument
            (name)
            (enum_value
              (name)))
          (argument
            (name)
            (enum_value
              (name))))
        (selection_set
          (field
            (name))
          (field
            (name)))))))

========================================
Description on operation, fragment and variable
========================================

"Op" query Q(
  "Var" $a: Int
) { a }

"Frag" fragment F on T { a }

----------------------------------------

(document
  (operation_definition
    (description
      (string_value
        (string_content)))
    (operation_type)
    (name)
    (variable_definitions
      (variable_definition
        (description
          (string_value
            (string_content)))
        (variable
          (name))
        (named_type
          (name))))
    (selection_set
      (field
        (name))))
  (fragment_definition
    (description
      (string_value
        (string_content)))
    (fragment_name
      (name))
    (type_condition
      (named_type
        (name)))
    (selection_set
      (field
        (name)))))

========================================
Fragment arguments (experimental)
========================================

fragment F($x: Int = 1) on T { a }

{ ...F(x: 2) @d }

----------------------------------------

(document
  (fragment_definition
    (fragment_name
      (name))
    (variable_definitions
      (variable_definition
        (variable
          (name))
        (named_type
          (name))
        (default_value
          (int_value))))
    (type_condition
      (named_type
        (name)))
    (selection_set
      (field
        (name))))
  (operation_definition
    (selection_set
      (fragment_spread
        (fragment_name
          (name))
        (arguments
          (argument
            (name)
            (int_value)))
        (directives
          (directive
            (name)))))))
